Fixed uneven container width

--- a/src/theme.css
+++ b/src/theme.css
@@ -15,7 +15,7 @@
 
 @layer components {
 	.container {
-		@apply mx-auto px-4 max-w-screen-xl;
+		@apply mx-auto px-4 max-w-6xl;
 	}
 }
 
